# starwarstl-fetch

./: .eslintrc.yml  .gitignore  .prettierignore  AGENTS.md  README.md  REFACTOR.md  eslint.config.js  jsconfig.json  package-lock.json  package.json  test.js  test.py  timeline  tsconfig.json  vitest.config.js
config/: suppressLog.json
native/: Cargo.toml  README.md  package-lock.json  package.json
native/src/: lib.rs
rust-rewrite/: Cargo.toml
rust-rewrite/src/: error.rs  main.rs  model.rs
scripts/: backupDb.sh  capture-api-data.js  generate-baseline.js  resizeTvImages.ts  run.sh  test-local-fetch.js
src/: config.js  config.ts  const.js  const.ts  db.js  db.ts  errors.ts  fetchLocal.js  fetchLocal.ts  fetchWookiee.js  fetchWookiee.ts  index.js  index.ts  initWtf.js  initWtf.ts  netLog.js  netLog.ts  parseWookieepediaDate.js  parseWookieepediaDate.ts  parsing.js  regex.js  regex.ts  runPipeline.js  runPipeline.ts  s3Image.js  util.d.ts  util.js  util.ts  wtf.ts
src/image/: fsImage.d.ts  fsImage.js  fsImage.ts  s3Image.d.ts  s3Image.js  s3Image.ts
src/parsing/: appearances.ts  categories.ts  document.ts  firstSentence.ts  index.ts  infobox.ts
src/pipeline/: adjustBookTypes.js  adjustBookTypes.ts  cleanupDrafts.js  cleanupDrafts.ts  images.js  images.ts  media.js  media.ts  mediaTypes.js  mediaTypes.ts  series.js  series.ts  timeline.js  timeline.ts  validateFullTypes.js  validateFullTypes.ts  validatePageIds.js  validatePageIds.ts
src/types/: appearances.ts  ast.ts  config.ts  db.ts  draft.ts  index.ts  log-with-statusbar.d.ts  wtf.ts  (+5 more)
tests/: README.md
(+9 files in other folders)
