[package]
name = "native"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_wiki_text = "0.1.5"
neon-serde3 = "0.10.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]

[dependencies.serde]
version = "1.0.160"
features = ["derive"]
