[package]
name = "rust-rewrite"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.28", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.6"
html-escape = "0.2.13"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
log = "0.4.26"
mongodb = "3.2.1"
parse_wiki_text = "0.1.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version =  "1.43.0", features = ["rt", "macros", "rt-multi-thread"] }
